--- a/public/style.css
+++ b/public/style.css
@@ -43,6 +43,10 @@ p {
    width: 6rem;
 }
 
+.hidden{
+  visibility: hidden;
+}
+
 .component {
     border: 0.2rem solid black;
     position: fixed;
@@ -52,6 +56,8 @@ p {
     bottom: 0;
 }
 
-.hidden{
-  visibility: hidden;
+
+
+.comments-component{
+border: 0.1rem solid black;
 }
