--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,10 @@
 * {
     margin: 0;
     box-sizing: border-box;
-    font-family:Unna;
+    font-family: Unna;
     text-transform: uppercase;
-    
-    background-color:rgb(232, 228, 228);
-   
+color:white;
+    background-color: rgb(78, 75, 75);
 }
 
 h1 {
@@ -13,17 +12,44 @@ h1 {
     margin-top: 2rem;
 }
 
-.main-input{
+.main-input {
     border: 0.1rem solid black;
     margin-left: 3rem;
 }
 
-input{
-    height:2rem;
-    width: 15Rem;
+input {
+    height: 2rem;
+    width: 15rem;
 }
 
+.inputfile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+   
+}
 
+.upload{
+    margin: 3rem;
+}
+.inputfile + label {
+    font-size: 1.25em;
+    font-weight: 700;
+    color: white;
+    background-color: black;
+    display: inline-block;
+    cursor: pointer
+}
+
+.inputfile:focus + label,
+.inputfile + label:hover {
+    outline: 1px dotted rgb(0, 0, 0);
+	outline: -webkit-focus-ring-color auto 5px;
+    background-color:rgb(92, 164, 231);
+}
 
 h3 {
     font-size: 1.5rem;
@@ -81,40 +107,37 @@ p {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 3rem 30rem 3rem 3rem;
-} 
+}
 
-
-.closeX{
+.closeX {
     margin-right: 1rem;
     margin-left: 96%;
     font-size: 1.5rem;
 }
 
-h2{
+h2 {
     margin-left: 3rem;
     margin-bottom: 1rem;
-    width:20rem;
+    width: 20rem;
 }
 
-.clicked-image{
-height: 28rem;
-width: 28rem;
-margin-left: 3rem;
-margin-bottom: 1rem;
+.clicked-image {
+    height: 28rem;
+    width: 28rem;
+    margin-left: 3rem;
+    margin-bottom: 1rem;
 }
 
-
-.img-description{
-width: 30rem;
-height:20rem;
+.img-description {
+    width: 30rem;
+    height: 20rem;
 }
-p{
-margin-left: 3rem;
-width: 20rem;
-height: 3rem;
-border: 0.2rem solid black;
+p {
+    margin-left: 3rem;
+    width: 20rem;
+    height: 3rem;
+    border: 0.2rem solid black;
 }
-
 
 .comments-component {
     border: 0.1rem solid black;
@@ -125,8 +148,6 @@ border: 0.2rem solid black;
     border: 0.1rem solid black;
     height: 2rem;
 }
-
-
 
 @media screen and (min-width: 1px) and (max-width: 800px) {
     * {
