--- a/public/style.css
+++ b/public/style.css
@@ -1,26 +1,42 @@
 * {
     margin: 0;
     box-sizing: border-box;
-    font-family: Unna;
+    font-family: "Nanum Myeongjo";
     text-transform: uppercase;
-    color: rgb(246, 245, 245);
-    background-color: rgb(30, 29, 29);
+    color: black;
+
+    text-align: center;
 }
 
 h1 {
-    margin-left: 3rem;
-    margin-top: 2rem;
-    font-weight:10;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    font-weight: 100;
+    text-align: center;
+    background-color: rgb(25, 44, 25, 0.1);
+    padding: 0.1rem;
+    color: rgb(3, 34, 3);
+}
+
+h3 {
+    text-shadow: 1px 1px rgb(204, 204, 204);
+    margin-bottom: 3rem;
 }
 
 .main-input {
-    border: 0.1rem solid black;
-    margin-left: 3rem;
+    text-align: center;
+    margin-bottom: 2rem;
 }
 
 input {
     height: 2rem;
     width: 15rem;
+    margin-left: 1rem;
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: solid;
+ 
 }
 
 .inputfile {
@@ -30,71 +46,93 @@ input {
     overflow: hidden;
     position: absolute;
     z-index: -1;
-   
 }
 
-.upload{
-    margin: 3rem;
-}
 .inputfile + label {
-    font-size: 1.25em;
-    font-weight: 700;
-    color: white;
-    background-color: black;
+    font-size: 1rem;
+    font-weight: 100;
+    height: 2.5rem;
+    width: 12rem;
+    background-color: rgba(37, 97, 37, 0.1);
     display: inline-block;
-    cursor: pointer
+    cursor: pointer;
+    padding-top: 0.6rem;
+    border-radius: 3px;
 }
 
 .inputfile:focus + label,
 .inputfile + label:hover {
-    outline: 1px dotted rgb(0, 0, 0);
-	outline: -webkit-focus-ring-color auto 5px;
-    background-color:rgb(92, 164, 231);
+    background-color: rgba(37, 97, 37, 0.3);
+}
+
+.inputfile + label {
+    cursor: pointer;
+}
+
+#upload-button {
+    font-size: 1rem;
+    width: 6rem;
+    height: 2.4rem;
+    border: 0;
+    background-color: rgba(37, 97, 37, 0.1);
+    border-radius: 3px;
+    margin-bottom: 1rem;
+    margin-left: 0.7rem;
+}
+
+#more-button {
+    height: 2.5rem;
+    width: 9rem;
+    font-size: 1rem;
+    background-color: rgb(25, 44, 25, 0.1);
+    box-shadow: 0 14px 28px rgba(13, 22, 3, 0.3);
+    border-radius: 3px;
+    margin-bottom: 2rem;
+    border:0;
+  
+}
+
+.hidden {
+    visibility: hidden;
 }
 
 h3 {
     font-size: 1.5rem;
     margin-left: 3rem;
     margin-bottom: 2rem;
+    margin-top: 2rem;
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    justify-content: center;
-    margin-left: 2rem;
+    grid-template-columns: repeat(3, 21rem);
+    grid-template-rows: repeat(3, 24rem);
+    justify-items: center;
+    transform: translateX(-50%);
+    margin-left: 50%;
+    width: 60rem;
 }
 
 .grid {
     width: 21rem;
 }
 
-input {
-    margin: 2rem;
+.upload {
+    text-align: center;
 }
 
 img {
     border-radius: 10px;
-    width: 20rem;
-    height: 20rem;
+    width: 17rem;
+    height: 19rem;
     object-fit: cover;
+    box-shadow: 0 14px 28px rgba(1, 2, 0, 0.25);
 }
 
 p {
-    font-size: 1.3rem;
+    margin-left: 3rem;
     width: 10rem;
-    margin-bottom: 1rem;
-}
-
-#more-button {
-    margin-left: 50%;
-    height: 3rem;
-    width: 6rem;
-}
-
-.hidden {
-    visibility: hidden;
+    height: 2rem;
 }
 
 .component {
@@ -133,12 +171,6 @@ h2 {
     width: 30rem;
     height: 20rem;
 }
-p {
-    margin-left: 3rem;
-    width: 20rem;
-    height: 3rem;
-    border: 0.2rem solid black;
-}
 
 .comments-component {
     border: 0.1rem solid black;
@@ -149,7 +181,7 @@ p {
     border: 0.1rem solid black;
     height: 10rem;
     width: 30rem;
-    margin:1rem;
+    margin: 1rem;
 }
 
 @media screen and (min-width: 1px) and (max-width: 800px) {
