--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@ h1 {
     margin-bottom: 3rem;
     font-weight: 100;
     text-align: center;
-    background-color: rgb(25, 44, 25, 0.1);
+   background-color: rgba(37, 97, 37, 0.1);
     padding: 0.1rem;
     color: rgb(3, 34, 3);
 }
@@ -36,7 +36,6 @@ input {
     border-right-style: hidden;
     border-left-style: hidden;
     border-bottom-style: solid;
- 
 }
 
 .inputfile {
@@ -58,6 +57,8 @@ input {
     cursor: pointer;
     padding-top: 0.6rem;
     border-radius: 3px;
+     border: 0.1rem solid rgb(126, 146, 126, 0.9);
+    border-radius: 4px;
 }
 
 .inputfile:focus + label,
@@ -78,6 +79,8 @@ input {
     border-radius: 3px;
     margin-bottom: 1rem;
     margin-left: 0.7rem;
+     border: 0.1rem solid rgb(126, 146, 126, 0.9);
+    border-radius: 4px;
 }
 
 #more-button {
@@ -88,8 +91,9 @@ input {
     box-shadow: 0 14px 28px rgba(13, 22, 3, 0.3);
     border-radius: 3px;
     margin-bottom: 2rem;
-    border:0;
-  
+   
+     border: 0.1rem solid rgb(126, 146, 126, 0.9);
+    border-radius: 4px;
 }
 
 .hidden {
@@ -136,58 +140,115 @@ p {
 }
 
 .component {
-    background-color: grey;
-    border: 0.2rem solid black;
+    background-color: rgb(220, 228, 214);
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 3rem 30rem 3rem 3rem;
+    grid-template-columns: 50rem 50rem;
+    grid-template-rows: 7rem 34rem 1fr;
 }
 
 .closeX {
+    margin-top: 1rem;
     margin-right: 1rem;
     margin-left: 96%;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    color: rgb(253, 253, 253);
+    text-shadow: 1px 1px rgb(144, 136, 136);
 }
 
 h2 {
-    margin-left: 3rem;
+    margin-top: 2.5rem;
     margin-bottom: 1rem;
-    width: 20rem;
+    color: rgba(30, 51, 30, 0.9);
+    
 }
 
 .clicked-image {
+    margin-top:0.3rem;
     height: 28rem;
     width: 28rem;
-    margin-left: 3rem;
-    margin-bottom: 1rem;
+    justify-self: center;
+    box-shadow: 0 14px 28px rgba(1, 2, 0, 0.25);
 }
 
 .img-description {
+    justify-self: center;
+     color: rgb(3, 34, 3, 0.9);
+}
+
+.p-component {
+    margin: 0;
     width: 30rem;
-    height: 20rem;
+    color: rgb(3, 34, 3, 0.9);
 }
 
 .comments-component {
-    border: 0.1rem solid black;
-    height: 100vh;
+    border: 0.2rem solid rgb(126, 146, 126, 0.5);
+    border-radius: 6px;
+    height: 40rem;
+    width: 50rem;
+}
+#p-comments {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 1rem;
+    text-align: center;
+    font-size: 1.2rem;
+    padding-top: 0.3rem;
+    color: rgb(3, 34, 3);
+    
 }
 
-.single-comment {
-    border: 0.1rem solid black;
-    height: 10rem;
+#single-comment {
+    justify-self: center;
+    margin: 1.3rem;
     width: 30rem;
-    margin: 1rem;
+    padding: 1rem;
+    background-color: rgb(253, 253, 253, 0.5);
+    margin-left: 11rem;
+    text-transform: lowercase;
+    box-shadow: 0 8px 8px rgba(1, 1, 0, 0.25);
+    color: rgb(95, 95, 94);
+    border-radius: 4px;
+    border: 0.1rem solid rgb(126, 146, 126, 0.9);
+}
+
+#comment-name {
+    width: 8rem;
+    margin-left: 0;
+    margin-bottom: 2rem;
+    height: 2rem;
+    background-color: rgb(253, 253, 253, 0.5);
+    border: 0.1rem solid rgb(126, 146, 126, 0.9);
+    border-radius: 4px;
+}
+#comment-input {
+    width: 25rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    height: 2rem;
+    background-color: rgb(253, 253, 253, 0.5);
+ 
+    border-radius: 4px;
+    border: 0.1rem solid rgb(126, 146, 126, 0.9);
+}
+
+.post {
+   
+    height: 2rem;
+    width: 6rem;
+    font-size: 1rem;
+    background-color: rgb(253, 253, 253, 0.5);
+    border-radius: 3px;
+   border: 0.1rem solid rgb(126, 146, 126, 0.9);
 }
 
 @media screen and (min-width: 1px) and (max-width: 800px) {
-    * {
-        background-color: black;
-    }
+  
     .grid-container {
         display: grid;
         grid-template-columns: 1fr;
