--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@ h1 {
     margin-bottom: 3rem;
     font-weight: 100;
     text-align: center;
-   background-color: rgba(37, 97, 37, 0.1);
+    background-color: rgba(37, 97, 37, 0.1);
     padding: 0.1rem;
     color: rgb(3, 34, 3);
 }
@@ -57,7 +57,7 @@ input {
     cursor: pointer;
     padding-top: 0.6rem;
     border-radius: 3px;
-     border: 0.1rem solid rgb(126, 146, 126, 0.9);
+
     border-radius: 4px;
 }
 
@@ -79,7 +79,6 @@ input {
     border-radius: 3px;
     margin-bottom: 1rem;
     margin-left: 0.7rem;
-     border: 0.1rem solid rgb(126, 146, 126, 0.9);
     border-radius: 4px;
 }
 
@@ -91,8 +90,8 @@ input {
     box-shadow: 0 14px 28px rgba(13, 22, 3, 0.3);
     border-radius: 3px;
     margin-bottom: 2rem;
-   
-     border: 0.1rem solid rgb(126, 146, 126, 0.9);
+
+    border: 0.1rem solid rgb(126, 146, 126, 0.9);
     border-radius: 4px;
 }
 
@@ -147,37 +146,38 @@ p {
     right: 0;
     bottom: 0;
     display: grid;
-    grid-template-columns: 50rem 50rem;
-    grid-template-rows: 7rem 34rem 1fr;
+    grid-template-columns:50% 50%;
+    grid-template-rows: 7rem 34rem 8rem 3rem;
+    justify-items: center;
 }
 
 .closeX {
-    margin-top: 1rem;
-    margin-right: 1rem;
-    margin-left: 96%;
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: rgb(253, 253, 253);
     text-shadow: 1px 1px rgb(144, 136, 136);
+    height:1.1rem;
+    justify-self: center;
+    margin-top: 3rem;
+  
 }
 
 h2 {
     margin-top: 2.5rem;
     margin-bottom: 1rem;
     color: rgba(30, 51, 30, 0.9);
-    
 }
 
 .clicked-image {
-    margin-top:0.3rem;
+    margin-top: 0.3rem;
     height: 28rem;
     width: 28rem;
-    justify-self: center;
+
     box-shadow: 0 14px 28px rgba(1, 2, 0, 0.25);
 }
 
 .img-description {
     justify-self: center;
-     color: rgb(3, 34, 3, 0.9);
+    color: rgb(3, 34, 3, 0.9);
 }
 
 .p-component {
@@ -187,10 +187,11 @@ h2 {
 }
 
 .comments-component {
-    border: 0.2rem solid rgb(126, 146, 126, 0.5);
+    border: 0.2rem solid rgb(126, 146, 126, 0.8);
     border-radius: 6px;
     height: 40rem;
-    width: 50rem;
+    width: 45rem;
+    margin:0;
 }
 #p-comments {
     width: 100%;
@@ -200,17 +201,14 @@ h2 {
     font-size: 1.2rem;
     padding-top: 0.3rem;
     color: rgb(3, 34, 3);
-    
 }
 
 #single-comment {
-    justify-self: center;
+    text-align: center;
     margin: 1.3rem;
-    width: 30rem;
+    
     padding: 1rem;
     background-color: rgb(253, 253, 253, 0.5);
-    margin-left: 11rem;
-    text-transform: lowercase;
     box-shadow: 0 8px 8px rgba(1, 1, 0, 0.25);
     color: rgb(95, 95, 94);
     border-radius: 4px;
@@ -232,28 +230,42 @@ h2 {
     margin-right: 1rem;
     height: 2rem;
     background-color: rgb(253, 253, 253, 0.5);
- 
+
     border-radius: 4px;
     border: 0.1rem solid rgb(126, 146, 126, 0.9);
 }
 
 .post {
-   
     height: 2rem;
     width: 6rem;
     font-size: 1rem;
     background-color: rgb(253, 253, 253, 0.5);
     border-radius: 3px;
-   border: 0.1rem solid rgb(126, 146, 126, 0.9);
+    border: 0.1rem solid rgb(126, 146, 126, 0.9);
 }
 
-@media screen and (min-width: 1px) and (max-width: 800px) {
-  
+@media screen and (min-width: 300px) and (max-width: 720px) {
     .grid-container {
         display: grid;
         grid-template-columns: 1fr;
-        grid-auto-rows: dens;
-        justify-content: center;
-        margin-left: 2rem;
+        grid-template-rows: 15rem 35rem 15rem 35 rem;
+        justify-items: center;
+        margin:0;
+      
+    }
+
+    .commponent{
+    grid-template-columns:1fr;
+    grid-template-rows: 1fr 1fr;
+    justify-items: center;
+    }
+
+    .img-description {
+          grid-row-start: 3; 
+    }
+
+    .comments-component{
+       grid-row-start: 4; 
+       grid-row-end: span 5;
     }
 }
