--- a/public/style.css
+++ b/public/style.css
@@ -29,6 +29,7 @@ input {
     height: 2rem;
     width: 15rem;
     margin-left: 1rem;
+    margin-bottom: 1rem;
     border-top-style: hidden;
     border-right-style: hidden;
     border-left-style: hidden;
@@ -75,6 +76,8 @@ input {
 
 #more-button,
 #upload-button,
+.post .name,
+.comment-input,
 input:focus {
     outline: 0;
 }
@@ -94,7 +97,10 @@ input:focus {
 
 #upload-button:hover,
 #more-button:hover,
-button:hover {
+button:hover,
+#next-image:hover,
+#prev-image:hover,
+.closeX:hover {
     background-color: rgba(37, 97, 37, 0.3);
 }
 
@@ -162,20 +168,23 @@ p {
     right: 2.5rem;
     bottom: 2.5rem;
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 7rem 34rem 8rem 3rem;
+    grid-template-columns: 40% 60%;
+    grid-template-rows: 5rem 27rem 20rem;
     justify-items: center;
     border: 0.2rem solid rgb(126, 146, 126, 0.9);
     border-radius: 5px;
 }
 
 .closeX {
+    grid-area: 1/2;
+    justify-self: end;
+    margin-right: 1rem;
+    margin-top: 1rem;
+    align-self: start;
     font-size: 1rem;
     color: rgb(253, 253, 253);
     text-shadow: 1px 1px rgb(144, 136, 136);
     height: 1.1rem;
-    justify-self: center;
-    margin-top: 3rem;
 }
 
 h2 {
@@ -184,29 +193,31 @@ h2 {
     color: rgba(30, 51, 30, 0.9);
 }
 
+.prev-and-next {
+    grid-area: 2/1;
+    width: 80%;
+}
+
 .clicked-image {
     margin-top: 0.3rem;
-    height: 28rem;
-    width: 28rem;
+    height: 25rem;
+    width: 100%;
     box-shadow: 0 14px 28px rgba(1, 2, 0, 0.25);
 }
 
-.prev-and-next {
-    width: 30rem;
-    background-color: rgb(25, 44, 25, 0.1);
+#next-image,
+#prev-image {
+    background-color: rgb(253, 253, 253, 0.5);
     box-shadow: 0 14px 28px rgba(13, 22, 3, 0.3);
-    margin-bottom: 2rem;
     border: 0;
-    border-radius: 10px;
-}
-
-.delete-button {
-    margin-top: 1rem;
+    border-radius: 4px;
 }
 
 .img-description {
     justify-self: center;
     color: rgb(3, 34, 3, 0.9);
+    margin-top: 0.5rem;
+    height: 10rem;
 }
 
 .p-component {
@@ -223,6 +234,7 @@ h2 {
     width: 45rem;
     margin: 0;
 }
+
 #p-comments {
     width: 100%;
     margin-left: 0;
@@ -259,9 +271,8 @@ h2 {
     margin-right: 1rem;
     height: 2rem;
     background-color: rgb(253, 253, 253, 0.5);
-
     border-radius: 4px;
-    border: 0.1rem solid rgb(126, 146, 126, 0.9);
+    border: 0.1rem solid rgba(116, 213, 116, 0.9);
 }
 
 .post {
@@ -275,27 +286,32 @@ h2 {
 
 /* responsive - Design */
 
-@media screen and (min-width: 300px) and (max-width: 720px) {
-    .grid-container {
+@media screen and (min-width: 300px) and (max-width: 920px) {
+    .grid-container-images,
+    .component {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 15rem 35rem 15rem 35 rem;
-        justify-items: center;
-        margin: 0;
+        grid-template-rows: auto;
+        place-items: center;
     }
 
-    .commponent {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
+    .prev-and-next {
+        width: 70%;
+        justify-self: center;
+        display:grid;
         justify-items: center;
     }
 
-    .img-description {
-        grid-row-start: 3;
+    .clicked-image {
+        margin-top: 0.3rem;
+        width: 70%;
+        height: auto;
+        box-shadow: 0 14px 28px rgba(1, 2, 0, 0.25);
     }
+
+  
 
     .comments-component {
-        grid-row-start: 4;
-        grid-row-end: span 5;
+        display: none;
     }
 }
